--- a/manual.html
+++ b/manual.html
@@ -626,7 +626,7 @@
                     <div class="callout-icon">💡</div>
                     <div class="callout-content">
                         <strong>Requisitos do Sistema</strong>
-                        <p>Windows 10 ou superior. Impressora térmica compatível (recomendamos MDK-007 ou similar).</p>
+                        <p>Windows 10 ou superior. Impressora térmica compatível com Windows.</p>
                     </div>
                 </div>
             </section>
@@ -637,7 +637,7 @@
 
                 <h3>1. Selecionar Impressora</h3>
                 <p>Na parte superior da tela, clique no seletor de impressora e escolha sua impressora térmica. O
-                    sistema detecta automaticamente impressoras MDK-007.</p>
+                    sistema detecta automaticamente as impressoras instaladas no seu computador.</p>
 
                 <h3>2. Escolher Tamanho de Etiqueta</h3>
                 <p>Selecione o tamanho de etiqueta correspondente ao papel da sua impressora:</p>
@@ -651,16 +651,20 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td><strong>4x2.5 cm (1 coluna)</strong></td>
+                            <td>Etiquetas pequenas para produtos menores</td>
+                        </tr>
+                        <tr>
+                            <td><strong>5x2.5 cm (1 coluna)</strong></td>
+                            <td>Etiquetas médias</td>
+                        </tr>
+                        <tr>
                             <td><strong>6x4 cm (1 coluna)</strong></td>
                             <td>Padrão Mercado Livre - Mais comum</td>
                         </tr>
                         <tr>
-                            <td><strong>6x4 cm (2 colunas)</strong></td>
-                            <td>Impressão em papel contínuo largo</td>
-                        </tr>
-                        <tr>
-                            <td><strong>4x2 cm</strong></td>
-                            <td>Etiquetas pequenas para produtos menores</td>
+                            <td><strong>8x5 cm (1 coluna)</strong></td>
+                            <td>Etiquetas maiores</td>
                         </tr>
                         <tr>
                             <td><strong>10x15 cm</strong></td>
