--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,21 @@
                         <p class="tutorial-description">Aprenda a cadastrar e conferir kits de produtos compostos.</p>
                     </div>
                 </div>
+                <div class="tutorial-card">
+                    <div class="tutorial-video-wrapper">
+                        <video controls preload="metadata">
+                            <source
+                                src="https://res.cloudinary.com/dzsp5muas/video/upload/v1769730365/CRIANDO_V%C3%8DNCULOS_EAN_PARA_SKU_nqz2fl.mp4"
+                                type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="tutorial-content">
+                        <span class="tutorial-badge">🎬 Tutorial</span>
+                        <h3 class="tutorial-title">Criando Vínculos EAN para SKU</h3>
+                        <p class="tutorial-description">Aprenda a criar vínculos entre códigos EAN e SKUs para facilitar
+                            a conferência.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
