--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17931180308"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17931180308');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullCheck Pro | Sistema de Conferência para Mercado Livre FULL</title>
     <meta name="description"
