--- a/tutorials.html
+++ b/tutorials.html
@@ -11,6 +11,7 @@
         gtag('js', new Date());
 
         gtag('config', 'AW-17931180308');
+        gtag('config', 'G-SED9GSW9C5');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullCheck Pro | Tutoriais em Vídeo</title>
