--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="#pricing">Preços</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="tutorials.html">Tutoriais</a></li>
+                <li><a href="printer-setup.html">Impressora</a></li>
             </ul>
             <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
                 class="nav-cta">Baixar Grátis</a>
@@ -106,9 +107,9 @@
             <div class="hero-video">
                 <div class="video-wrapper">
                     <video id="heroVideo" loop playsinline
-                        poster="https://res.cloudinary.com/dzsp5muas/video/upload/so_0/v1769644451/Apresentacao_FullCheck_Pro_umg43s.jpg">
+                        poster="https://res.cloudinary.com/dzsp5muas/video/upload/so_0/v1770317000/aplesentacao_ingmdc.jpg">
                         <source
-                            src="https://res.cloudinary.com/dzsp5muas/video/upload/v1769644451/Apresentacao_FullCheck_Pro_umg43s.mp4"
+                            src="https://res.cloudinary.com/dzsp5muas/video/upload/v1770317000/aplesentacao_ingmdc.mp4"
                             type="video/mp4">
                     </video>
                     <div class="video-overlay" id="videoOverlay" onclick="playVideo()">
