--- a/tutorials.html
+++ b/tutorials.html
@@ -67,6 +67,8 @@
                 <li><a href="index.html#how-it-works">Como Funciona</a></li>
                 <li><a href="index.html#pricing">Preços</a></li>
                 <li><a href="index.html#faq">FAQ</a></li>
+                <li><a href="tutorials.html">Tutoriais</a></li>
+                <li><a href="printer-setup.html">Impressora</a></li>
             </ul>
             <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
                 class="nav-cta">Baixar Grátis</a>
@@ -166,6 +168,18 @@
                             para seus envios no FullCheck Pro.</p>
                     </div>
                 </div>
+                <a href="printer-setup.html" class="tutorial-card" style="text-decoration: none; color: inherit;">
+                    <div class="tutorial-video-wrapper"
+                        style="display: flex; align-items: center; justify-content: center; aspect-ratio: 16/9; background: linear-gradient(135deg, rgba(99, 102, 241, 0.2) 0%, rgba(139, 92, 246, 0.2) 100%);">
+                        <div style="font-size: 4rem;">🖨️</div>
+                    </div>
+                    <div class="tutorial-content">
+                        <span class="tutorial-badge">📏 Guia</span>
+                        <h3 class="tutorial-title">Configurar Impressora</h3>
+                        <p class="tutorial-description">Medidas de etiquetas suportadas e dicas de configuração para sua
+                            impressora térmica.</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
