--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <div class="hero-video">
                 <div class="video-wrapper">
                     <video id="heroVideo" loop playsinline
-                        poster="https://res.cloudinary.com/dzsp5muas/video/upload/so_0/v1770317000/aplesentacao_ingmdc.jpg">
+                        poster="https://res.cloudinary.com/dzsp5muas/video/upload/so_0/v1770327600/Grava%C3%A7%C3%A3o_de_tela_-_5_de_fev._de_2026_134347_1_rmez1i.jpg">
                         <source
-                            src="https://res.cloudinary.com/dzsp5muas/video/upload/v1770317000/aplesentacao_ingmdc.mp4"
+                            src="https://res.cloudinary.com/dzsp5muas/video/upload/v1770327600/Grava%C3%A7%C3%A3o_de_tela_-_5_de_fev._de_2026_134347_1_rmez1i.mp4"
                             type="video/mp4">
                     </video>
                     <div class="video-overlay" id="videoOverlay" onclick="playVideo()">
