--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         </svg>
                     </div>
                     <h3 class="feature-title">Leitura por Código de Barras</h3>
-                    <p class="feature-description">Verifique produtos rapidamente usando um leitor de código de barras
-                        ou digitando o EAN manualmente.</p>
+                    <p class="feature-description">Verifique produtos rapidamente usando um leitor de código de barras.
+                    </p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
