--- a/printer-setup.html
+++ b/printer-setup.html
@@ -36,7 +36,7 @@
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
-            color: var(--gray-400);
+            color: var(--text-medium, #475569);
             text-decoration: none;
             font-weight: 500;
             margin-bottom: 2rem;
@@ -44,7 +44,7 @@
         }
 
         .back-to-home:hover {
-            color: white;
+            color: var(--primary);
         }
 
         .back-to-home svg {
@@ -75,7 +75,7 @@
         }
 
         .printer-section p {
-            color: var(--gray-400);
+            color: var(--text-light, #64748B);
             margin-bottom: 1.5rem;
             line-height: 1.7;
         }
@@ -84,8 +84,9 @@
         .label-table-container {
             overflow-x: auto;
             border-radius: 16px;
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(99, 102, 241, 0.15);
+            background: white;
+            box-shadow: 0 4px 15px rgba(99, 102, 241, 0.08);
         }
 
         .label-table {
@@ -95,25 +96,25 @@
         }
 
         .label-table th {
-            background: rgba(99, 102, 241, 0.15);
-            color: var(--primary-light);
+            background: rgba(99, 102, 241, 0.1);
+            color: var(--primary);
             font-weight: 600;
             padding: 0.75rem 1rem;
             text-align: left;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(99, 102, 241, 0.15);
         }
 
         .th-subtitle {
             font-size: 0.75rem;
             font-weight: 500;
-            color: var(--gray-400);
+            color: var(--text-light, #64748B);
             margin-top: 0.25rem;
         }
 
         .dim-label {
             display: inline-block;
-            background: rgba(99, 102, 241, 0.3);
-            color: var(--primary-light);
+            background: rgba(99, 102, 241, 0.2);
+            color: var(--primary);
             padding: 0.1rem 0.4rem;
             border-radius: 4px;
             font-weight: 600;
@@ -122,8 +123,8 @@
 
         .label-table td {
             padding: 1rem;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-            color: var(--gray-300);
+            border-bottom: 1px solid rgba(99, 102, 241, 0.08);
+            color: var(--text-dark, #1E293B);
         }
 
         .label-table tr:last-child td {
@@ -136,7 +137,7 @@
 
         .label-type {
             font-weight: 600;
-            color: white;
+            color: var(--text-dark, #1E293B);
         }
 
         /* Dimension pair with copy buttons */
@@ -150,18 +151,18 @@
             display: inline-flex;
             align-items: center;
             gap: 0.4rem;
-            background: rgba(255, 255, 255, 0.06);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(99, 102, 241, 0.08);
+            border: 1px solid rgba(99, 102, 241, 0.2);
             padding: 0.4rem 0.6rem;
             border-radius: 8px;
             font-family: 'Inter', sans-serif;
             font-size: 0.95rem;
-            font-weight: 600;
-            color: white;
+            font-weight: 700;
+            color: var(--primary);
         }
 
         .dimension-x {
-            color: var(--gray-500);
+            color: var(--text-light, #64748B);
             font-weight: 400;
             margin: 0 0.25rem;
         }
@@ -188,7 +189,7 @@
         .copy-btn svg {
             width: 16px;
             height: 16px;
-            stroke: var(--gray-400);
+            stroke: var(--primary);
             fill: none;
         }
 
@@ -211,16 +212,18 @@
             display: flex;
             gap: 1rem;
             align-items: flex-start;
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            background: white;
+            border: 1px solid rgba(99, 102, 241, 0.1);
             border-radius: 12px;
             padding: 1.25rem;
             transition: all 0.3s;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
         }
 
         .step-item:hover {
             border-color: rgba(99, 102, 241, 0.3);
-            background: rgba(99, 102, 241, 0.05);
+            background: rgba(99, 102, 241, 0.03);
+            box-shadow: 0 5px 20px rgba(99, 102, 241, 0.1);
         }
 
         .step-item .step-number {
@@ -245,11 +248,11 @@
             font-size: 1rem;
             font-weight: 600;
             margin-bottom: 0.35rem;
-            color: white;
+            color: var(--text-dark, #1E293B);
         }
 
         .step-content p {
-            color: var(--gray-400);
+            color: var(--text-light, #64748B);
             font-size: 0.9rem;
             margin: 0;
             line-height: 1.5;
@@ -257,13 +260,13 @@
 
         kbd {
             display: inline-block;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(99, 102, 241, 0.1);
+            border: 1px solid rgba(99, 102, 241, 0.2);
             border-radius: 4px;
             padding: 0.15rem 0.4rem;
             font-family: 'Consolas', 'Monaco', monospace;
             font-size: 0.85rem;
-            color: var(--primary-light);
+            color: var(--primary);
         }
 
         /* Tips section */
@@ -275,16 +278,18 @@
         }
 
         .tip-card {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            background: white;
+            border: 1px solid rgba(99, 102, 241, 0.1);
             border-radius: 16px;
             padding: 1.5rem;
             transition: all 0.3s;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
         }
 
         .tip-card:hover {
             border-color: rgba(99, 102, 241, 0.3);
             transform: translateY(-3px);
+            box-shadow: 0 10px 30px rgba(99, 102, 241, 0.1);
         }
 
         .tip-card h3 {
@@ -297,7 +302,7 @@
         }
 
         .tip-card p {
-            color: var(--gray-400);
+            color: var(--text-light, #64748B);
             font-size: 0.9rem;
             margin: 0;
         }
