--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
             return false;
         }
     </script>
+    <!-- Event snippet for Baixar Grátis conversion page -->
+    <script>
+        function gtag_report_conversion_download(url) {
+            var callback = function () {
+                if (typeof (url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-17931180308/jyX0CPrxhvQbEJSyoOZC',
+                'event_callback': callback
+            });
+            return false;
+        }
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullCheck Pro | Sistema de Conferência para Mercado Livre FULL</title>
     <meta name="description"
@@ -65,8 +80,8 @@
                 <li><a href="tutorials.html">Tutoriais</a></li>
                 <li><a href="printer-setup.html">Impressora</a></li>
             </ul>
-            <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
-                class="nav-cta">Baixar Grátis</a>
+            <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank" class="nav-cta"
+                onclick="gtag_report_conversion_download(this.href);">Baixar Grátis</a>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
         </div>
     </nav>
@@ -90,7 +105,7 @@
                 </p>
                 <div class="hero-cta">
                     <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
-                        class="btn btn-primary">
+                        class="btn btn-primary" onclick="gtag_report_conversion_download(this.href);">
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path
                                 d="M3 12V6.75L9 5.43V11.91L3 12M20 3V11.75L10 11.9V5.21L20 3M3 13L9 13.09V19.9L3 18.75V13M20 13.25V22L10 20.09V13.1L20 13.25Z" />
@@ -327,7 +342,7 @@
                     </li>
                 </ul>
                 <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
-                    class="btn btn-primary pricing-cta">
+                    class="btn btn-primary pricing-cta" onclick="gtag_report_conversion_download(this.href);">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M3 12V6.75L9 5.43V11.91L3 12M20 3V11.75L10 11.9V5.21L20 3M3 13L9 13.09V19.9L3 18.75V13M20 13.25V22L10 20.09V13.1L20 13.25Z" />
@@ -387,7 +402,7 @@
                 cartão de crédito.</p>
             <div class="cta-buttons">
                 <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
-                    class="btn btn-primary">
+                    class="btn btn-primary" onclick="gtag_report_conversion_download(this.href);">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M3 12V6.75L9 5.43V11.91L3 12M20 3V11.75L10 11.9V5.21L20 3M3 13L9 13.09V19.9L3 18.75V13M20 13.25V22L10 20.09V13.1L20 13.25Z" />
@@ -417,7 +432,8 @@
                 <a href="manual.html">Manual</a>
                 <a href="https://wa.me/5541936181098?text=Olá! Preciso de ajuda com o FullCheck Pro" target="_blank"
                     onclick="gtag_report_conversion(this.href);">Suporte</a>
-                <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank">Microsoft
+                <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
+                    onclick="gtag_report_conversion_download(this.href);">Microsoft
                     Store</a>
             </div>
             <p class="footer-copyright">© 2026 FullCheck Pro • Fabio Braboza</p>
