--- a/tutorials.html
+++ b/tutorials.html
@@ -28,6 +28,21 @@
             return false;
         }
     </script>
+    <!-- Event snippet for Baixar Grátis conversion page -->
+    <script>
+        function gtag_report_conversion_download(url) {
+            var callback = function () {
+                if (typeof (url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-17931180308/jyX0CPrxhvQbEJSyoOZC',
+                'event_callback': callback
+            });
+            return false;
+        }
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullCheck Pro | Tutoriais em Vídeo</title>
     <meta name="description"
@@ -85,8 +100,8 @@
                 <li><a href="tutorials.html">Tutoriais</a></li>
                 <li><a href="printer-setup.html">Impressora</a></li>
             </ul>
-            <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
-                class="nav-cta">Baixar Grátis</a>
+            <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank" class="nav-cta"
+                onclick="gtag_report_conversion_download(this.href);">Baixar Grátis</a>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
         </div>
     </nav>
@@ -210,7 +225,8 @@
                 <a href="manual.html">Manual</a>
                 <a href="https://wa.me/5541936181098?text=Olá! Preciso de ajuda com o FullCheck Pro" target="_blank"
                     onclick="gtag_report_conversion(this.href);">Suporte</a>
-                <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank">Microsoft
+                <a href="https://apps.microsoft.com/detail/9ND78SMZ01WL?hl=pt-br&gl=BR" target="_blank"
+                    onclick="gtag_report_conversion_download(this.href);">Microsoft
                     Store</a>
             </div>
             <p class="footer-copyright">© 2026 FullCheck Pro • Fabio Braboza</p>
